--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/105/three.js"></script>
     <script src="asserts/js/panolens.min.js"></script>
+    <script src="asserts/js/panolens-addon.js"></script>
     <script src="asserts/js/main.js"></script>
 </body>
 </html>
